feat: role mapper